maquetado terminado 'preguntas frecuentes'

--- a/index.html
+++ b/index.html
@@ -4,16 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="../css/index.css"/>
     <title>Document</title>
   </head>
   <body>
+    <div class="barra-menu">
+      <a href="index.html">
+        <img src="imagenes/image.png" alt="" class="logo">
+      </a>
+      <ul class="lista-opciones">
+        <li class="item-lista"><a class="link" href="Inicio.html">Inicio</a></li>
+        <li class="item-lista"><a class="link" href="Contacto.html">Comprar</a></li>
+        <li class="item-lista"><a class="link" href="Acerca De">Acerca De</a></li>
+        <li class="item-lista"><a class="link" href="Contacto.html">Contacto</a></li>
+      </ul>
+    </div>
     <section class="faq">
-      <h2>Preguntas frecuentes</h2>
+      <h2>Preguntas Frecuentes</h2>
+
+      <hr>
       <ul class="faq-list">
-        <li id="faq-1" class="faq-item">
+        <li id="faq-1" class="faq-item ">
           <h3 class="faq-item-title">
-            <a href="#faq-1"> Pregunta frecuente 1 </a>
+            <a href="#faq-1" > Que metodos de pagos aceptamos? </a>
           </h3>
           <p class="faq-item-text">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim
